change motivational text

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <!-- Hero -->
         <section id="hero" class="hero-fullscreen parallax" data-overlay-dark="7">
             <div class="background-image">
-                <img src="img/backgrounds/bg-1.jpg" alt="#">
+                <img src="img/backgrounds/bg-10.jpg" alt="#">
             </div>
 
             <div class="container">
@@ -92,38 +92,38 @@
                     <div class="hero-content-slider mt20" data-autoplay="true" data-speed="4000">
 
                         <div>
-                            <h1>Sage of Sparta<br><strong>Something You Love</strong></h1>
+                            <h1>Courage<br><strong>Something You Love</strong></h1>
                             <p class="lead">Find your vision!!!</p>
                             <a href="#about" class="btn btn-lg btn-primary btn-scroll">We're Creative</a>
                         </div>
 
                         <div>
-                            <h1>Sage of Sparta<br><strong>We believe the impossible</strong></h1>
+                            <h1>Unwavering<br><strong>Believe the impossible</strong></h1>
                             <p class="lead">Aim high</p>
                             <a href="#about" class="btn btn-lg btn-primary btn-scroll">What we do</a>
                         </div>
 
                         <div>
-                            <h1>Sage of Sparta<br><strong>Champions</strong></h1>
+                            <h1>Winning<br><strong>Champions</strong></h1>
                             <p class="lead">Never give up on yourself! Ignore the naysayers</p>
                             <a href="#about" class="btn btn-lg btn-primary btn-scroll">Made with <i class="ion-heart"></i></a>
                         </div>
 
                         <div>
-                            <h1>Sage of Sparta<br><strong>Take action</strong></h1>
+                            <h1>Sacrifice<br><strong>Take action</strong></h1>
                             <p class="lead">If you do what is easy, life will be difficult</p>
                             <a href="#about" class="btn btn-lg btn-primary btn-scroll">Made with <i class="ion-heart"></i></a>
                         </div>
 
                         <div>
-                            <h1>Sage of Sparta<br><strong>Take action</strong></h1>
-                            <p class="lead">If you do what is easy now, life will be difficult later</p>
-                            <a href="#about" class="btn btn-lg btn-primary btn-scroll">Made with <i class="ion-heart"></i></a>
+                            <h1>Honesty<br><strong>Be true to yourself</strong></h1>
+                            <p class="lead">You will never know if you don't try!</p>
+                            <a href="#team" class="btn btn-lg btn-primary btn-scroll">Meet the Team</a>
                         </div>
 
                         <div>
-                            <h1>Sage of Sparta<br><strong>Put the work in</strong></h1>
-                            <p class="lead">If you do what is difficult now, life will be easier later</p>
+                            <h1>Accountability<br><strong>Take action</strong></h1>
+                            <p class="lead">If you do what is easy, life will be difficult</p>
                             <a href="#about" class="btn btn-lg btn-primary btn-scroll">Made with <i class="ion-heart"></i></a>
                         </div>
 
@@ -227,6 +227,7 @@
         <script src="js/jquery.js"></script>
         <script src="js/init.js"></script>
         <script src="js/scripts.js"></script>
+        <script src="js/custom.js"></script>
 
     </body>
 
