remove contact form

--- a/index-2.html
+++ b/index-2.html
@@ -66,12 +66,9 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="#contact">Contact</a></li>
+                            
 
-                            <li class="nav-separator"></li>
-                            <li  class="nav-icon"><a href="http://facebook.com/" target="_blank"><i class="ion-social-facebook"></i></a></li>
-                            <li  class="nav-icon"><a href="http://twitter.com/" target="_blank"><i class="ion-social-twitter"></i></a></li>
-                            <li  class="nav-icon"><a href="http://youtube.com/" target="_blank"><i class="ion-social-youtube"></i></a></li>
+
                         </ul>
 
                     </div>
@@ -145,56 +142,17 @@
 
         
 
-        <!-- Contact Form -->
-        <section id="contact" class="pt120 pb100">
-            <div class="container">
-                <div class="row">
+        <!-- Map -->
+        <section class="vossen-map">
+            <!-- Paste your map iframe here -->
+            <iframe height="550" src="https://maps.google.com/maps?q=Bermuda%Triangle&amp;t=&amp;z=3&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" border="0" marginwidth="0" marginheight="0"></iframe>
 
-                    <div class="col-md-12 text-center pb20">
-                        <h2>Get In Touch<br><strong>Contact Us</strong></h2>
-                        <p class="lead">We would like to <span class="color">hear from you</span></p>
-                    </div>
-
-                    <div class="col-md-8 col-md-offset-2 contact box-style">
-                        <div id="message-info"></div>
-                        <!-- Forms can be functional only on server. Upload to your server when testing. -->
-                        <form  method="post">
-
-                            <div class="col-sm-12">
-                                <input name="name" id="name" placeholder="Your Name *"/>
-                            </div>
-                            <div class="col-sm-6">
-                                <input name="email" id="email" placeholder="Your Email *"/>
-                            </div>
-                            <div class="col-sm-6">
-                                <input name="phone" id="phone" placeholder="Your Phone"/>
-                            </div>
-                            <div class="col-sm-12">
-                                <textarea name="message" rows="9" id="message" placeholder="Your Message *"></textarea>
-                            </div>
-                            <div class="col-md-12">
-                                <input type="submit" class="submit btn btn-lg btn-primary" id="submit" value="Send Message"/>
-                            </div>
-
-                        </form>
-                    </div>
-
-                </div>
-            </div>
         </section>
-        <!-- End Contact Form -->
+        <!-- End Map -->
 
 
         <!-- Start Footer -->
         <footer id="footer" class="footer style-1 dark">
-
-            <ul>
-                <li><a href="https://www.twitter.com/" target="_blank" class="color"><i class="ion-social-twitter"></i></a></li>
-                <li><a href="https://www.facebook.com/" target="_blank" class="color"><i class="ion-social-facebook"></i></a></li>
-                <li><a href="https://www.linkedin.com/" target="_blank" class="color"><i class="ion-social-linkedin"></i></a></li>
-                <li><a href="https://www.pinterest.com/" target="_blank" class="color"><i class="ion-social-pinterest"></i></a></li>
-                <li><a href="https://plus.google.com/" target="_blank" class="color"><i class="ion-social-googleplus"></i></a></li>
-            </ul>
 
             <!-- Back To Top Button -->
             <span><a class="scroll-top"><i class="ion-chevron-up"></i></a></span>
@@ -213,3 +171,5 @@
 
 <!-- index13:13-->
 </html>
+
+
