--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
         
         <meta charset="utf-8">
-        <title>Sage of Sparta</title>
+        <title>Love of Quant</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="img/assets/favicon.png" rel="icon" type="image/png">
         <link href="css/init.css" rel="stylesheet" type="text/css">
@@ -78,7 +78,7 @@
         <!-- End Header -->
 
         <!-- Hero -->
-        <section id="hero" class="hero-fullscreen parallax" data-overlay-dark="7">
+        <section id="hero" class="hero-fullscreen parallax" data-overlay-dark="4">
             <div class="background-image">
                 <img src="img/backgrounds/bg-10.jpg" alt="#">
             </div>
