--- a/ism-services.html
+++ b/ism-services.html
@@ -5,7 +5,7 @@
 <head>
         
         <meta charset="utf-8">
-        <title>Wunderkind - Multipurpose Responsive Onepage Template</title>
+        <title>Love of Quant</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="img/assets/favicon.png" rel="icon" type="image/png">
         <link href="css/init.css" rel="stylesheet" type="text/css">
@@ -98,24 +98,9 @@
         </section>
         <!-- End Project -->
 
-        <section class="project-nav">
-            <a href="project-wide-slides.html"><i class="ion-android-arrow-back"></i><h5><strong>Previous</strong></h5></a>
-            <a href="portfolio-contained.html"><h5><strong>All Projects</strong></h5></a>
-            <a href="project-wide-gallery.html"><h5><strong>Next</strong></h5><i class="ion-android-arrow-forward"></i></a>
-        </section>
 
         <!-- Start Footer -->
         <footer id="footer" class="footer style-1 dark">
-
-            <a href="index-2.html"><img src="img/assets/footer-logo.png" alt="#" class="mr-auto img-responsive"></a>
-            <ul>
-                <li><a href="https://www.twitter.com/" target="_blank" class="color"><i class="ion-social-twitter"></i></a></li>
-                <li><a href="https://www.facebook.com/" target="_blank" class="color"><i class="ion-social-facebook"></i></a></li>
-                <li><a href="https://www.linkedin.com/" target="_blank" class="color"><i class="ion-social-linkedin"></i></a></li>
-                <li><a href="https://www.pinterest.com/" target="_blank" class="color"><i class="ion-social-pinterest"></i></a></li>
-                <li><a href="https://plus.google.com/" target="_blank" class="color"><i class="ion-social-googleplus"></i></a></li>
-            </ul>
-
 
             <!-- Back To Top Button -->
             <span><a class="scroll-top"><i class="ion-chevron-up"></i></a></span>
