--- a/index-2.html
+++ b/index-2.html
@@ -5,7 +5,7 @@
 <head>
         
         <meta charset="utf-8">
-        <title>Sage of Sparta</title>
+        <title>Love of Quant</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="img/assets/favicon.png" rel="icon" type="image/png">
         <link href="css/init.css" rel="stylesheet" type="text/css">
