--- a/stocks.html
+++ b/stocks.html
@@ -5,7 +5,7 @@
 <head>
         
 		<meta charset="utf-8">
-		<title>Sage of Sparta</title>
+		<title>Love of Quant</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="img/assets/favicon.png" rel="icon" type="image/png">
 		<link href="css/init.css" rel="stylesheet" type="text/css">
@@ -400,16 +400,6 @@
 
 		<!-- Start Footer -->
 		<footer id="footer" class="footer style-1 dark">
-
-			<a href="index-2.html"><img src="img/assets/footer-logo.png" alt="#" class="mr-auto img-responsive"></a>
-			<ul>
-				<li><a href="https://www.twitter.com/" target="_blank" class="color"><i class="ion-social-twitter"></i></a></li>
-				<li><a href="https://www.facebook.com/" target="_blank" class="color"><i class="ion-social-facebook"></i></a></li>
-				<li><a href="https://www.linkedin.com/" target="_blank" class="color"><i class="ion-social-linkedin"></i></a></li>
-				<li><a href="https://www.pinterest.com/" target="_blank" class="color"><i class="ion-social-pinterest"></i></a></li>
-				<li><a href="https://plus.google.com/" target="_blank" class="color"><i class="ion-social-googleplus"></i></a></li>
-			</ul>
-
 
 			<!-- Back To Top Button -->
 			<span><a class="scroll-top"><i class="ion-chevron-up"></i></a></span>
