update background colors

--- a/index-2.html
+++ b/index-2.html
@@ -78,10 +78,10 @@
         <!-- End Header -->
 
         <!-- Hero -->
-        <section id="hero" class="hero-fullscreen parallax" data-overlay-dark="4">
-            <div class="background-image">
-                <img src="img/backgrounds/bg-10.jpg" alt="#">
-            </div>
+        <section id="hero" class="hero-fullscreen parallax" data-overlay-dark="0">
+            <script>
+                document.body.style.backgroundColor = "#BAB0EE";  
+            </script>
 
             <div class="container">
                 <div class="row">
