--- a/index.html
+++ b/index.html
@@ -77,11 +77,12 @@
         </nav>
         <!-- End Header -->
 
-        <!-- Hero -->
-        <section id="hero" class="hero-fullscreen parallax" data-overlay-dark="4">
-            <div class="background-image">
-                <img src="img/backgrounds/bg-10.jpg" alt="#">
-            </div>
+        <!-- Hero B99ABC-->
+        <section id="hero" class="hero-fullscreen parallax" data-overlay-dark="0">
+
+            <script>
+                document.body.style.backgroundColor = "#BAB0EE";  
+            </script>
 
             <div class="container">
                 <div class="row">
@@ -115,7 +116,7 @@
                         <div>
                             <h1>Honesty<br><strong>Be true to yourself</strong></h1>
                             <p class="lead">You will never know if you don't try!</p>
-                            <a href="#team" class="btn btn-lg btn-primary btn-scroll">Meet the Team</a>
+                            <a href="#about" class="btn btn-lg btn-primary btn-scroll">Made with <i class="ion-heart"></i></a>
                         </div>
 
                         <div>
