--- a/index-2.html
+++ b/index-2.html
@@ -33,7 +33,7 @@
                             <span class="icon-bar middle-bar"></span>
                             <span class="icon-bar bottom-bar"></span>
                         </button>
-                        <!-- <a class="navbar-brand to-top" href="#"><img src="img/assets/logo-light.png" class="logo-light" alt="#"><img src="img/assets/logo-dark.png" class="logo-dark" alt="#"></a> -->
+                         <a class="navbar-brand to-top" href="#"><img src="img/assets/logo-dark-.png" class="logo-light" alt="#"><img src="img/assets/logo-dark--.png" class="logo-dark" alt="#"></a> 
                     </div>
                 </div>
 
@@ -82,7 +82,6 @@
             <script>
                 document.body.style.backgroundColor = "#BAB0EE";  
             </script>
-
             <div class="container">
                 <div class="row">
 
