add dashboard page

--- a/ism-services.html
+++ b/ism-services.html
@@ -58,6 +58,7 @@
                                                 <li><a href="ism.html">ISM Manufacturing</a></li>
                                                 <li><a href="ism-services.html">ISM Services</a></li>
                                                 <li><a href="ism-heatmaps.html">ISM Heatmaps</a></li>
+                                                <li><a href="dashboard.html">Stock Dashboard</a></li>
                                                 
                                             </ul>
                                         </div>
