--- a/umcsi.html
+++ b/umcsi.html
@@ -58,17 +58,13 @@
                                                 <li><a href="ism.html">ISM Manufacturing</a></li>
                                                 <li><a href="ism-services.html">ISM Services</a></li>
                                                 <li><a href="ism-heatmaps.html">ISM Heatmaps</a></li>
+                                                <li><a href="dashboard.html">Stock Dashboard</a></li>
                                             </ul>
                                         </div>
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="index-2.html#contact">Contact</a></li>
 
-                            <li class="nav-separator"></li>
-                            <li  class="nav-icon"><a href="http://facebook.com/" target="_blank"><i class="ion-social-facebook"></i></a></li>
-                            <li  class="nav-icon"><a href="http://twitter.com/" target="_blank"><i class="ion-social-twitter"></i></a></li>
-                            <li  class="nav-icon"><a href="#" target="_blank"><i class="ion-help-buoy"></i></a></li>
                         </ul>
 
                     </div>
