add frames update

--- a/dashboard.html
+++ b/dashboard.html
@@ -7,11 +7,11 @@
 
 	<frameset rows="*,*"> 
 		
-		<frame frameborder="0" src="dashboard_frame_1.html"> </frame>
+		<frame frameborder="0" name="f1" src="dashboard_frame_1.html" > </frame>
 
 		<frameset cols="*,*"> 
-			<frame frameborder="0" src="dashboard_frame_2.html"></frame>
-			<frame frameborder="0" src="frame_3.html"> </frame>
+			<frame frameborder="0" name="f2" src="dashboard_frame_2.html" ></frame>
+			<frame frameborder="0" name="f3" src="frame_3.html"> </frame>
 		</frameset> 
 	</frameset>
 
