--- a/dashboard_frame_2.html
+++ b/dashboard_frame_2.html
@@ -16,7 +16,7 @@
 		<link href="css/theme.css" rel="stylesheet" type="text/css">
 		<link href="css/custom.css" rel="stylesheet" type="text/css">
 		<link href="css/colors/purple.css" rel="stylesheet" type="text/css">
-		<link href="http://fonts.googleapis.com/css?family=Montserrat:400,700%7CRaleway:400,100,200,300%7CHind:400,300" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CRaleway:400,100,200,300%7CHind:400,300" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"></script>
@@ -87,7 +87,7 @@
 						$('#TICKER', window.parent.frames['f1'].document).on('click', function () {
 
 							
-							var x =       window.parent.f1.document.getElementById("frm1");
+							var x = window.parent.f1.document.getElementById("frm1");
 							var ticker = x.elements[0].value
 							var urlstring = "https://financialmodelingprep.com/api/v3/enterprise-values/" + ticker + "?limit=40&apikey=c01b3c8e189822588988574a0c3957dd"
 
