--- a/housing - Copy.html
+++ b/housing - Copy.html
@@ -30,7 +30,7 @@
                             <span class="icon-bar middle-bar"></span>
                             <span class="icon-bar bottom-bar"></span>
                         </button>
-                         <!-- <a class="navbar-brand to-top" href="#"><img src="img/assets/logo-light.png" class="logo-light" alt="#"><img src="img/assets/logo-dark-.png" class="logo-dark" alt="#"></a> -->
+                        <!-- <a class="navbar-brand to-top" href="#"><img src="img/assets/logo-dark-.png" class="logo-light" alt="#"><img src="img/assets/logo-dark-.png" class="logo-dark" alt="#"></a> -->
                     </div>
                 </div>
 
@@ -59,7 +59,6 @@
                                                 <li><a href="ism-services.html">ISM Services</a></li>
                                                 <li><a href="ism-heatmaps.html">ISM Heatmaps</a></li>
                                                 <li><a href="stock_dash.html">Stock Dashboard</a></li>
-                                                
                                             </ul>
                                         </div>
                                     </li>
@@ -80,20 +79,18 @@
                 <div class="row text-center">
 
                     <div class="col-md-12 text-center">
-                        <h1><strong>ISM Services</strong></h1>
-                        <p class="lead">The ISM services bla bla bla.</p>
+                        <h1><strong>Building Permits - Housing Starts - Completions</strong></h1>
+                        <p class="lead">building stuffs</p>
                     </div>
 
                 </div>
             </div>
 
                            <!-- DAMIAN J -->
-            <div id="chartDiv4" style="width:80%; height:500px; margin:0 auto;"></div>  
-
+            <div id="chartDivHOUSING" style="width:80%; height:500px; margin:0 auto;"></div>  
 
         </section>
         <!-- End Project -->
-
 
         <!-- Start Footer -->
         <footer id="footer" class="footer style-1 dark">
@@ -106,7 +103,7 @@
         <script src="https://code.jscharting.com/latest/jscharting.js"></script>
         <script type="text/javascript" src="https://code.jscharting.com/latest/modules/types.js"></script>
         <script type="text/javascript" src="https://code.jscharting.com/latest/modules/toolbar.js"></script>
-        <script src="js/nmi.js"></script>
+        <script src="js/housing.js"></script>
         <script src="js/jquery.js"></script>
         <script src="js/init.js"></script>
         <script src="js/scripts.js"></script>
