--- a/index-2.html
+++ b/index-2.html
@@ -18,7 +18,7 @@
     </head>
     <body data-fade-in="true">
 
-        <div class="pre-loader"><div></div></div>
+        <div class="pre-loader"><div></div></div> 
 
         <!-- Start Header -->
         <nav class="navbar nav-down" data-fullwidth="true" data-menu-style="transparent" data-animation="shrink">
@@ -33,7 +33,7 @@
                             <span class="icon-bar middle-bar"></span>
                             <span class="icon-bar bottom-bar"></span>
                         </button>
-                         <a class="navbar-brand to-top" href="#"><img src="img/assets/logo-dark-.png" class="logo-light" alt="#"><img src="img/assets/logo-dark--.png" class="logo-dark" alt="#"></a> 
+                         <!-- <a class="navbar-brand to-top" href="#"><img src="img/assets/logo-dark-.png" class="logo-light" alt="#"><img src="img/assets/logo-dark--.png" class="logo-dark" alt="#"></a> -->
                     </div>
                 </div>
 
@@ -61,7 +61,7 @@
                                                 <li><a href="ism.html">ISM Manufacturing</a></li>
                                                 <li><a href="ism-services.html">ISM Services</a></li>
                                                 <li><a href="ism-heatmaps.html">ISM Heatmaps</a></li>
-                                                <li><a href="dashboard.html">Stock Dashboard</a></li>
+                                                <li><a href="stock_dash.html">Stock Dashboard</a></li>
                                             </ul>
                                         </div>
                                     </li>
