--- a/ism.html
+++ b/ism.html
@@ -30,7 +30,7 @@
                             <span class="icon-bar middle-bar"></span>
                             <span class="icon-bar bottom-bar"></span>
                         </button>
-                        <a class="navbar-brand to-top" href="#"><img src="img/assets/logo-light.png" class="logo-light" alt="#"><img src="img/assets/logo-dark-.png" class="logo-dark" alt="#"></a>
+                        <!-- <a class="navbar-brand to-top" href="#"><img src="img/assets/logo-light.png" class="logo-light" alt="#"><img src="img/assets/logo-dark-.png" class="logo-dark" alt="#"></a> -->
                     </div>
                 </div>
 
@@ -59,18 +59,13 @@
                                                 <li><a href="ism.html">ISM Manufacturing</a></li>
                                                 <li><a href="ism-services.html">ISM Services</a></li>
                                                 <li><a href="ism-heatmaps.html">ISM Heatmaps</a></li>
-                                                <li><a href="dashboard.html">Stock Dashboard</a></li>
+                                                <li><a href="stock_dash.html">Stock Dashboard</a></li>
                                             </ul>
                                         </div>
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="index-2.html#contact">Contact</a></li>
-
-                            <li class="nav-separator"></li>
-                            <li  class="nav-icon"><a href="http://facebook.com/" target="_blank"><i class="ion-social-facebook"></i></a></li>
-                            <li  class="nav-icon"><a href="http://twitter.com/" target="_blank"><i class="ion-social-twitter"></i></a></li>
-                            <li  class="nav-icon"><a href="#" target="_blank"><i class="ion-help-buoy"></i></a></li>
+                            
                         </ul>
 
                     </div>
