--- a/stock_dash.html
+++ b/stock_dash.html
@@ -201,8 +201,31 @@
 				</div>
 			</div>
 
+			 
 
 		</section>
+
+        <!-- Project -->
+        <section class="pt140 pb50">
+            <div class="container">
+                <div class="row text-center">
+
+                    <div class="col-md-12 text-center">
+                        <h1><strong>EPS Chart</strong></h1>
+                        <p class="lead">EPS Yeah</p>
+                    </div>
+
+                </div>
+            </div>
+
+                           <!-- DAMIAN J -->
+            <div id="epschartdiv" style="width:80%; height:500px; margin:0 auto;"></div> 
+            <div id="stockchartdiv" style="width:80%; height:500px; margin:0 auto;"></div> 
+
+
+        </section>
+        <!-- End Project -->
+
 
 
 		<table id="table" class="display" width="40%"> <caption style="text-align:center;font-size:40px"><strong>Enterprise Values</strong></caption> </table>  
@@ -237,11 +260,12 @@
 
 		</footer>
 		<!-- End Footer -->
-
+		<script src="js/stockdash.js"></script>
         <script src="js/jquery.js"></script>
         <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"></script>
 		<script src="js/init.js"></script>
 		<script src="js/scripts.js"></script>
+
 
 	</body>
 
