update about section

--- a/gdp.html
+++ b/gdp.html
@@ -40,6 +40,7 @@
 
                             <!-- Each section must have corresponding ID ( #hero -> id="hero" ) -->
                             <li><a href="index-2.html">Home</a></li>
+                            <li><a href="index-2.html#about">About</a></li>
                             <li class="dropdown megamenu vos">
                                 <a class="dropdown-toggle">Elements<i class="ion-ios-arrow-down"></i></a>
                                 <ul class="dropdown-menu fullwidth">
