update about section

--- a/index-2.html
+++ b/index-2.html
@@ -146,25 +146,21 @@
 
                         <p class="lead">The love of Quant website is created with the intention of consolidating all the data required to make optimal trading decisions on the world financial markets. The data consists of:</p>
 
-                        <div id="wrapper" style="display: table; margin: 0 auto; text-align: left;">
+                        <div id="wrapper" style="display: table; margin: 0 auto; text-align: left; font-size:18px; ">
                             <ul>
-                              <li>Leading macro-economic indicators such as ISM Manufacturing, bla bla</li>
-                              <li>Order flow</li>
-                              <li>Financial News</li>
-                              <li>Company specific info such as financial ratios and earnings</li>
+                              <li>• Leading macro-economic indicators such as ISM Manufacturing, bla bla</li>
+                              <li>• Order flow</li>
+                              <li>• Financial News</li>
+                              <li>• Company specific info such as financial ratios and earnings</li>
                             </ul>  
                         </div>
                         
                         
-                        <p>Data provided by <a href="https://financialmodelingprep.com/developer/docs/"><span class="color">Financial Modeling Prep</span></a></p>
-                        <p>Charts created using <a href="https://jscharting.com/tutorials/creating-js-charts/"><span class="color">JSCharting</span></a></p>
-
+                        <p>All amazing data provided by <a href="https://financialmodelingprep.com/developer/docs/"><span class="color">Financial Modeling Prep</span></a>
+                        and beautiful charts created using <a href="https://jscharting.com/tutorials/creating-js-charts/"><span class="color">JSCharting</span></a></p>
                     </div>
-
                 </div>
-
             </div>
-
         </section>
         <!-- End About Us -->
 
