update stock dashboard

--- a/index-2.html
+++ b/index-2.html
@@ -144,7 +144,7 @@
 
                         <p class="lead" style="font-style: italic;"><span class="color">"You can't win if you don't try"</span></p>
 
-                        <p class="lead">The love of Quant website is created with the intention of consolidating all the data required to make optimal trading decisions on the world financial markets. The data consists of:</p>
+                        <p class="lead">The <span class="color" style="font-style: italic;">Love of Quant</span> website is created with the intention of consolidating all the data required to make <br> optimal trading decisions on the world financial markets. The data consists of:</p>
 
                         <div id="wrapper" style="display: table; margin: 0 auto; text-align: left; font-size:18px; ">
                             <ul>
@@ -156,8 +156,8 @@
                         </div>
                         
                         
-                        <p>All amazing data provided by <a href="https://financialmodelingprep.com/developer/docs/"><span class="color">Financial Modeling Prep</span></a>
-                        and beautiful charts created using <a href="https://jscharting.com/tutorials/creating-js-charts/"><span class="color">JSCharting</span></a></p>
+                        <p>All amazing data provided by <a href="https://financialmodelingprep.com/developer/docs/" target="_blank"><span class="color">Financial Modeling Prep</span></a>
+                        and beautiful charts created using <a href="https://jscharting.com/tutorials/creating-js-charts/" target="_blank"><span class="color">JSCharting</span></a></p>
                     </div>
                 </div>
             </div>
