update about section wording

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
                         <p class="lead" style="font-style: italic;"><span class="color">"You can't win if you don't try"</span></p>
 
-                        <p class="lead">The <span class="color" style="font-style: italic;">Love of Quant</span> website is created with the intention of consolidating all the data required to make <br> optimal trading decisions on the world financial markets. The data consists of:</p>
+                        <p class="lead">The <span class="color" style="font-style: italic;">Love of Quant</span> website is created with the intention of giving you a consolidated view of all the data required to make <br> optimal trading decisions in our global financial markets. The data consists of:</p>
 
                         <div id="wrapper" style="display: table; margin: 0 auto; text-align: left; font-size:18px; ">
                             <ul>
