--- a/stock_dash.html
+++ b/stock_dash.html
@@ -242,7 +242,8 @@
 
                            <!-- DAMIAN J -->
             <div id="epschartdiv" style="width:80%; height:500px; margin:0 auto;"></div> 
-            <div id="stockchartdiv" style="width:80%; height:500px; margin:0 auto;"></div> 
+            <div id="stockchartdiv" style="width:80%; height:500px; margin:0 auto;"></div>
+            <div id="pegchartdiv" style="width:80%; height:500px; margin:0 auto;"></div>  
 
 
         </section>
