--- a/bitmex_calc.html
+++ b/bitmex_calc.html
@@ -96,58 +96,64 @@
 					<button id="SOLANA" class="btn btn-md btn-primary btn-round">Solana</button>
 					<button id="CARDANO" class="btn btn-md btn-primary btn-round">Cardano</button>
 					<button id="POLKADOT" class="btn btn-md btn-primary btn-round">Polkadot</button>
+				</div>
+			</div>
+			
+			<div class="container">
+				 <div class="login-box">
+					  <form id="frm1">
 
+					  	<!-- <label for="side" class="dropbeta">Go Long/Short</label> -->
+						  <select id="side" name="side" style="background-color: transparent; font-family: sans-serif;  font-size: 16px; color: #fff;">
+						    <option value="long" style="background-color: black; font-family: sans-serif;  font-size: 16px; color: white;">Long</option>
+						    <option value="short" style="background-color: black; font-family: sans-serif;  font-size: 16px; color: white;">Short</option>
+						  </select>
+						<div class="user-box">
+					      <input type="text" name="forder" required="">
+					      <label>Order Value</label>
+					    </div>
+					    <div class="user-box">
+					      <input type="text" name="fprice" required="">
+					      <label>Price</label>
+					    </div>
+					    <div class="user-box">
+					      <input type="number" name="flimitentry" required="">
+					      <label>Limit Entry</label>
+					    </div>
+					    <div class="user-box">
+					      <input type="number" name="fstop" required="">
+					      <label>Stop Loss</label>
+					    </div>
+					    <div class="user-box">
+					      <input type="number" name="ftarget" required="">
+					      <label>Target</label>
+					    </div>
+						<div class="user-box">
+					      <input type="number" name="fqty" required="">
+					      <label>Quantity</label>
+					    </div>
+						<div class="user-box">
+					      <input type="number" name="fleverage" required="">
+					      <label>Leverage</label>
+					    </div>
+
+					    <a button id="TICKER">
+					      <span></span>
+					      <span></span>
+					      <span></span>
+					      <span></span>
+					      Model
+					    </a>
+					  </form>
+				</div>
 			</div>
 
-			 <div class="login-box" >
-			  <form id="frm1">
 
-			  	<!-- <label for="side" class="dropbeta">Go Long/Short</label> -->
-				  <select id="side" name="side" style="background-color: transparent; font-family: sans-serif;  font-size: 16px; color: #fff;">
-				    <option value="long" style="background-color: black; font-family: sans-serif;  font-size: 16px; color: white;">Long</option>
-				    <option value="short" style="background-color: black; font-family: sans-serif;  font-size: 16px; color: white;">Short</option>
-				  </select>
-				<div class="user-box">
-			      <input type="text" name="forder" required="">
-			      <label>Order Value</label>
-			    </div>
-			    <div class="user-box">
-			      <input type="text" name="fprice" required="">
-			      <label>Price</label>
-			    </div>
-			    <div class="user-box">
-			      <input type="number" name="flimitentry" required="">
-			      <label>Limit Entry</label>
-			    </div>
-			    <div class="user-box">
-			      <input type="number" name="fstop" required="">
-			      <label>Stop Loss</label>
-			    </div>
-			    <div class="user-box">
-			      <input type="number" name="ftarget" required="">
-			      <label>Target</label>
-			    </div>
-				<div class="user-box">
-			      <input type="number" name="fqty" required="">
-			      <label>Quantity</label>
-			    </div>
-				<div class="user-box">
-			      <input type="number" name="fleverage" required="">
-			      <label>Leverage</label>
-			    </div>
-
-			    <a button id="TICKER">
-			      <span></span>
-			      <span></span>
-			      <span></span>
-			      <span></span>
-			      Model
-			    </a>
-
-			  </form>
+		</section>
 
 
-			</div>
+
+
 
 			
 
