add secrets of black candle

--- a/stocks.html
+++ b/stocks.html
@@ -128,6 +128,7 @@
 												<li><a href="ism-services.html">ISM Services</a></li>
 												<li><a href="ism-heatmaps.html">ISM Heatmaps</a></li>
 												<li><a href="stock_dash.html">Stock Dashboard</a></li>
+												<li><a href="bitmex_calc.html" target="_top">Bitmex Crypto Calculator</a></li>
 											</ul>
 										</div>
 									</li>
