--- a/bitmex_calc.html
+++ b/bitmex_calc.html
@@ -71,6 +71,7 @@
 												<li><a href="ism-services.html" target="_top">ISM Services</a></li>
 												<li><a href="ism-heatmaps.html" target="_top">ISM Heatmaps</a></li>
 												<li><a href="stock_dash.html" target="_top">Stock Dashboard</a></li>
+												<li><a href="bitmex_calc.html" target="_top">Bitmex Crypto Calculator</a></li>
 											</ul>
 										</div>
 									</li>
