--- a/black_candle.html
+++ b/black_candle.html
@@ -61,6 +61,7 @@
                                                 <li><a href="umcsi.html">UMCSI</a></li>
                                                 <li><a href="housing.html">Housing</a></li>
                                                 <li><a href="screener.html">Stock Screener</a></li>
+                                                <li><a href="black_candle.html" target="_top">Secrets of Black Candle</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-md-3 mg-col">
@@ -133,7 +134,7 @@
 
              <div id="grid" style="max-width: 440px;margin: 0px auto"></div>
 
-            <table id="table" class="display" width="40%"> <caption style="text-align:center;font-size:40px"><strong>Watchlist</strong></caption> </table> 
+            <table id="table" class="display" width="40%"> </table> 
 
 
         </section>
