--- a/ism.html
+++ b/ism.html
@@ -52,6 +52,7 @@
                                                 <li><a href="umcsi.html">UMCSI</a></li>
                                                 <li><a href="housing.html">Housing</a></li>
                                                 <li><a href="screener.html">Stock Screener</a></li>
+                                                <li><a href="black_candle.html" target="_top">Secrets of Black Candle</a></li>
                                                 
                                             </ul>
                                         </div>
